# twstock-screener

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy.yml
config/: audit_known_outliers.toml
data/backtest_fixtures/: snapshot_regime_3a.csv  snapshot_regime_emit_detail.csv  snapshot_regime_p7_3a.csv  snapshot_regime_p7_report.csv  snapshot_regime_report.csv
data/backups/: 00631L_7780_pre_split_ohlc_backup_2026-05-22.csv  00674R_pre_corp_action_ohlc_backup_2026-05-22.csv
docs/handoff/: 2026-07-02-deploy-cn02-handoff.md
scripts/: analyze.py  backfill.py  cn02.crontab  deploy.sh  notify_deploy.py  refresh_metadata.py  run_backtest.py  twstock-screener.cron  upload_db_to_drive.py
src/twstock_screener/: analyze.py  audit.py  backtest.py  circuit_breaker.py  config.py  db.py  fetch.py  holidays.py  notify.py  pivot.py  progress.py  ranking.py  ratelimit.py  score.py  snapshot.py  state_machine.py
tests/: conftest.py  test_analyze_batch_gate.py  test_analyze_detector_isolation.py  test_analyze_load_filter.py  test_analyze_stale_guard.py  test_audit.py  test_backfill.py  test_backtest.py  test_circuit_breaker.py  test_config.py  test_db.py  test_deploy_config.py  test_detector_idempotency.py  test_fetch.py  test_holidays.py  test_idempotency.py  test_labeled_benchmark.py  test_notify_deploy.py  test_notify_format.py  test_notify_logging.py  test_notify_security.py  test_pivot.py  test_progress.py  test_ranking.py  test_ratelimit.py  test_replay.py  test_score.py  test_snapshot_diff.py  test_state_machine.py
(+44 files in other folders)
